--- a/index.html
+++ b/index.html
@@ -4,43 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Country</title>
-    <style>
-      body {
-        text-align: center;
-        display: grid;
-        place-content: center;
-        color: white;
-        background-color: black;
-      }
-      div {
-        font-size: 20px;
-        width: 600px;
-        text-align: center;
-        margin-top: 20px;
-        margin-bottom: 10px;
-      }
-      button {
-        color: white;
-        width: 150px;
-        margin: 10px auto;
-        background: transparent;
-        border: 1px solid white;
-        cursor: pointer;
-      }
-      #details {
-        background-color: salmon;
-      }
-      #details img {
-        object-fit: cover;
-        width: 100%;
-        height: auto;
-      }
-    </style>
+    <title>CountryPedia</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>CountryPedia</h1>
-    <div id="output">Click to generate</div>
+    <h1 id="title">CountryPedia</h1>
+    <h3 id="chose">Select a country</h3>
+    <div id="output"></div>
     <div id="details"></div>
     <script src="app.js"></script>
   </body>
