--- a/index.html
+++ b/index.html
@@ -6,12 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CountryPedia</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <h1 id="title">CountryPedia</h1>
     <h3 id="chose">Select a country</h3>
     <div id="output"></div>
     <div id="details"></div>
+
+    <footer>
+      <p>
+        Coded by
+        <a target="_blank" href="https://github.com/RakibRahman"
+          >Rakib Rahman</a
+        >
+        With 💗
+      </p>
+    </footer>
     <script src="app.js"></script>
   </body>
 </html>
