--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="shortcut icon"
+      href="img/world-svgrepo-com.svg"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <h1 id="title">CountryPedia</h1>
